# Python_Basic

./: .gitignore  .python-version  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  01_파이썬_기초_문법.ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수).ipynb  04_데이터_분석_기초_넘파이_blank.ipynb  05_데이터_분석_기초_판다스.ipynb  05_데이터_분석_기초_판다스_blank.ipynb  06_데이터_분석_기초_실습.ipynb  06_데이터_분석_기초_판다스.ipynb  07_탐색적_데이터_분석_가이드.ipynb  08_1_탐색적_데이터_분석_실습_숙제.ipynb  08_탐색적_데이터_분석_실습_따릉이.ipynb  09_텍스트_데이터_분석_토크나이징.ipynb  main.py  numpy.ipynb  pyproject.toml  seaborn_example.ipynb  데이터_전처리.ipynb  제어문_숙제.ipynb  판다스_숙제.ipynb
data/: appereply_2.csv  공공자전거 대여소 정보.csv
